--- a/sistema.html
+++ b/sistema.html
@@ -4,24 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Sistema - Loja de Acessórios Norte</title>
-  <style>
-    :root{--accent:#4f46e5;--muted:#666;--bg:#f6f7fb}
-    body{margin:0;font-family:sans-serif;background:var(--bg);}
-    header{background:var(--accent);color:white;padding:14px 20px;
-           display:flex;justify-content:space-between;align-items:center}
-    nav{width:200px;background:white;padding:14px;border-right:1px solid #ddd}
-    nav button{display:block;width:100%;padding:10px;border:0;background:none;
-               text-align:left;cursor:pointer;border-radius:6px}
-    nav button.active{background:#f3f0ff;color:var(--accent);font-weight:bold}
-    .app{display:flex;height:calc(100vh - 50px)}
-    main{flex:1;padding:18px;overflow:auto}
-    .card{background:white;padding:12px;margin-bottom:10px;border-radius:8px;box-shadow:0 1px 3px rgba(0,0,0,.1)}
-    table{width:100%;border-collapse:collapse}
-    th,td{padding:8px;border-bottom:1px solid #eee;text-align:left}
-    input,select,textarea,button{font:inherit}
-    .btn{padding:6px 10px;border-radius:6px;border:0;background:var(--accent);color:white;cursor:pointer}
-    .btn.ghost{background:transparent;color:var(--accent);border:1px solid #ddd}
-  </style>
+  <link rel="stylesheet" href="css/sistema.css">
 </head>
 <body>
   <header>
@@ -58,9 +41,11 @@
         <br><br>
 
         <!-- Buscar produto -->
-        <input id="pos-search" placeholder="Buscar produto por nome ou SKU"/>
-        <input id="pos-qty" type="number" min="1" value="1" style="width:60px"/>
-        <button id="btn-add-to-cart">Adicionar</button>
+        <div class="form-group-inline">
+          <input type="search" id="pos-search" placeholder="Buscar produto por nome ou SKU"/>
+          <input id="pos-qty" type="number" min="1" value="1"/>
+          <button id="btn-add-to-cart" class="btn">Adicionar</button>
+        </div>
 
         <table id="cart-table">
             <thead>
