--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Login - Loja de Acessórios Norte</title>
-  <style>
-    body{margin:0;height:100vh;display:flex;justify-content:center;align-items:center;
-         background:#f6f7fb;font-family:sans-serif;}
-    .login-box{background:white;padding:20px;border-radius:12px;box-shadow:0 2px 6px rgba(0,0,0,0.15);width:300px}
-    h1{font-size:18px;text-align:center;margin-bottom:16px;color:#4f46e5}
-    input{width:100%;padding:10px;margin:6px 0;border:1px solid #ccc;border-radius:8px}
-    button{width:100%;padding:10px;border:0;border-radius:8px;background:#4f46e5;color:white;cursor:pointer}
-    button:hover{background:#3730a3}
-  </style>
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <div class="login-box">
